remove fixed scrollbar style

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,7 +1,3 @@
-html {
-    overflow-y:scroll; /* fixed scrollbar */
-}
-
 #foreground {
     padding-left: 50%;
     padding-right: 10%;
